syntax = "proto3";

package persistence_sdk.persistence_sdk.modules.orders.internal.queries.order;

import "gogoproto/gogo.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/orders/internal/queries/order";


message QueryRequest {
  string order_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field OrderID missing"'];
}

message QueryResponse {
  bool success = 1;
  string error = 2 [(gogoproto.moretags) = 'swaggertype:"string"'];
  repeated string list = 3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/helpers.Mappable"];
}