syntax = "proto3";
package identities.transactions.define;

import "ids/base/identity_id.proto";
import "lists/base/property_list.proto";

message Message {
  string from = 1;
  ids.base.IdentityID from_i_d = 2;
  lists.base.PropertyList immutable_meta_properties = 3;
  lists.base.PropertyList immutable_properties = 4;
  lists.base.PropertyList mutable_meta_properties = 5;
  lists.base.PropertyList mutable_properties = 6;
}